Fix DCHECK in the chromoting host when disconnecting a WebRTC connection.

WebRTC creates threads internally. Thread::Stop() is a blocking operation,
so it's not allowed on the network thread. To work around this problem
WebrtcTransport::PeerConnectionWrapper uses ScopedAllowIO when closing
PeerConnection. But it's not longer enough - some threads are stopped
later when the factory is destroyed. Updated PeerConnectionWrapper
destructor to destroy the PeerConnectionFactory with ScopedAllowIO.

BUG=714699

Review-Url: https://codereview.chromium.org/2847803003
Cr-Commit-Position: refs/heads/master@{#467838}

Former-commit-id: 8c6a6fa53691f5a3f55023cc003e9c665083ea34